--- a/ML_prerequisite.ipynb
+++ b/ML_prerequisite.ipynb
@@ -16,14 +16,20 @@
     }
    ],
    "source": [
-    "# Q1. How many multiplications and additions do you need to perform a matrix multiplication \n",
+    "# Q1. \n",
+    "\n",
+    "\n",
+    "# How many multiplications and additions do you need to perform a matrix multiplication \n",
     "# between a (n, k) and (k, m) matrix? Explain.\n",
     "# Ans. n*m*k\n",
     "# The final answer matrix has the dimensions of nxm, i.e., there are n*m cells. For each cell, we need to multiply k times\n",
     "# and then add those products. This is repeated for each cell. \n",
     "\n",
     "\n",
-    "# Q2. Write Python code to multiply the above two matrices. Solve using list of lists and then use numpy.\n",
+    "# Q2. \n",
+    "\n",
+    "\n",
+    "# Write Python code to multiply the above two matrices. Solve using list of lists and then use numpy.\n",
     "# Compare the timing of both solutions. Which one is faster? Why?\n",
     "\n",
     "# using python lists-\n",
@@ -101,12 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "7dc28161",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median is: 54\n",
+      "time taken is: 0.0020020008087158203\n"
+     ]
+    }
+   ],
    "source": [
-    "# Q3. Finding the highest element in a list requires one pass of the array. \n",
+    "# Q3. \n",
+    "\n",
+    "\n",
+    "# Finding the highest element in a list requires one pass of the array. \n",
     "# Finding the second highest element requires 2 passes of the the array. \n",
     "# Using this method, what is the time complexity of finding the median of the array?\n",
     "\n",
@@ -114,7 +132,89 @@
     "# We need to repeat this process for n//2 times, so the time complexity of the algorithm becomes O(n^2).\n",
     "\n",
     "# a better method would be to sort the elements of the array in O(nlogn) and then take the middlemost \n",
-    "# element, which would take constant time. so overall complexity would be O(nlogn)"
+    "# element, which would take constant time. so overall complexity would be O(nlogn)\n",
+    "\n",
+    "\n",
+    "# ###################################3\n",
+    "# using the first method\n",
+    "import time\n",
+    "arr = [92, 37, 14, 65, 78, 23, 91, 54, 88, 10, 29, 46, 73, 81, 19, 36, 57, 67, 12, 45, \n",
+    "       87, 32, 69, 58, 27, 95, 42, 50, 75, 18, 61, 83, 11, 68, 49, 76, 22, 40, 64, 99, 1]\n",
+    "\n",
+    "# median is 6\n",
+    "temp = []\n",
+    "start = time.time()\n",
+    "while len(temp) < len(arr):\n",
+    "    large = -1\n",
+    "    for i in range (len(arr)):\n",
+    "        if arr[i] > large:\n",
+    "            large = arr[i]\n",
+    "    temp.append(large)\n",
+    "    arr.remove(large)\n",
+    "\n",
+    "# print (arr)\n",
+    "# print (temp)\n",
+    "\n",
+    "print ('median is:', temp[len(temp)-1])\n",
+    "print ('time taken is:', time.time() - start)\n",
+    "\n",
+    "# ########################################3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "87d4530e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median is: 54\n",
+      "time taken: 0.0010380744934082031\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using sorting\n",
+    "import time\n",
+    "arr = [92, 37, 14, 65, 78, 23, 91, 54, 88, 10, 29, 46, 73, 81, 19, 36, 57, 67, 12, 45, \n",
+    "       87, 32, 69, 58, 27, 95, 42, 50, 75, 18, 61, 83, 11, 68, 49, 76, 22, 40, 64, 99, 1]\n",
+    "start = time.time()\n",
+    "arr.sort()\n",
+    "print ('median is:', arr[len(arr)//2])\n",
+    "print ('time taken:', time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c499ba77",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median is: 54.0\n",
+      "time taken: 0.0010182857513427734\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using numpy.median\n",
+    "import numpy as np\n",
+    "arr = [92, 37, 14, 65, 78, 23, 91, 54, 88, 10, 29, 46, 73, 81, 19, 36, 57, 67, 12, 45, \n",
+    "       87, 32, 69, 58, 27, 95, 42, 50, 75, 18, 61, 83, 11, 68, 49, 76, 22, 40, 64, 99, 1]\n",
+    "start = time.time()\n",
+    "ans = np.median(arr)\n",
+    "print ('median is:', ans)\n",
+    "print ('time taken:', time.time() - start)"
    ]
   },
   {
@@ -209,15 +309,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "24a0d0e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Q8. now using classes\n",
-    "# def student():\n",
-    "#     def __init__(self):\n",
-    "        "
+    "class year:\n",
+    "    def __init__(self, year, branch):\n",
+    "        self.year = year\n",
+    "        self.branch = branch\n",
+    "        \n",
+    "class branch:\n",
+    "    def __init__(self, branch, names):\n",
+    "        self.names = names\n",
+    "        self.branch = branch\n",
+    "    \n",
+    "class student:\n",
+    "    def __init__(self, name, roll_number, marks):\n",
+    "        self.name = name\n",
+    "        self.roll_number = roll_number\n",
+    "        self.marks = marks\n",
+    "        \n",
+    "student1 = student('A', 1, [50, 50, 50])\n",
+    "student2 = student('B', 2, [50, 50, 50])\n",
+    "student3 = student('C', 3, [50, 50, 50])\n",
+    "student4 = student('D', 4, [50, 50, 50])\n",
+    "\n",
+    "electrical = branch('elec', [student1, student2])\n",
+    "cse = branch('CSE', [student3, student4])\n",
+    "\n",
+    "yr1 = year('2021', electrical)\n",
+    "yr2 = year('2020', cse)\n",
+    "\n",
+    "# print (yr1)\n",
+    "# doubtful how to display the data. checked the code on pythontutor and seemed to work fine there"
    ]
   },
   {
@@ -504,6 +630,228 @@
     "p.ylabel('e^x')\n",
     "\n",
     "p.plot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "fadcb500",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           a         b         c         d         e\n",
+      "0   1.682647  1.513711  1.118498  1.113972  1.454993\n",
+      "1   1.618436  1.214707  1.396516  1.845840  1.773360\n",
+      "2   1.138137  1.373487  1.265437  1.445059  1.862862\n",
+      "3   1.091661  1.812778  1.872193  1.295895  1.227430\n",
+      "4   1.267019  1.978086  1.373799  1.415566  1.169479\n",
+      "5   1.207394  1.939644  1.917794  1.563452  1.688764\n",
+      "6   1.771552  1.550108  1.172892  1.132550  1.586792\n",
+      "7   1.126037  1.722039  1.522941  1.422347  1.868040\n",
+      "8   1.015470  1.510194  1.448237  1.264710  1.837397\n",
+      "9   1.481383  1.904907  1.814584  1.316289  1.744941\n",
+      "10  1.614178  1.992218  1.086836  1.260741  1.826878\n",
+      "11  1.239842  1.660824  1.818875  1.268992  1.067019\n",
+      "12  1.398495  1.830475  1.664868  1.312020  1.423880\n",
+      "13  1.851649  1.171435  1.746779  1.988057  1.350265\n",
+      "14  1.088945  1.731347  1.302080  1.176986  1.387287\n",
+      "15  1.820113  1.241120  1.982601  1.786062  1.766845\n",
+      "16  1.588188  1.297377  1.109791  1.839029  1.659330\n",
+      "17  1.860600  1.413923  1.338702  1.259449  1.009240\n",
+      "18  1.049387  1.352402  1.465650  1.404907  1.846553\n",
+      "19  1.643565  1.265859  1.423263  1.792032  1.931743\n",
+      "a    0.297075\n",
+      "b    0.276732\n",
+      "c    0.287099\n",
+      "d    0.264774\n",
+      "e    0.291422\n",
+      "dtype: float64\n",
+      "a 0.29707529024151785\n",
+      "<bound method NDFrame._add_numeric_operations.<locals>.min of 0     1.376764\n",
+      "1     1.569772\n",
+      "2     1.416997\n",
+      "3     1.459991\n",
+      "4     1.440790\n",
+      "5     1.663410\n",
+      "6     1.442779\n",
+      "7     1.532281\n",
+      "8     1.415202\n",
+      "9     1.652420\n",
+      "10    1.556170\n",
+      "11    1.411111\n",
+      "12    1.525948\n",
+      "13    1.621637\n",
+      "14    1.337329\n",
+      "15    1.719348\n",
+      "16    1.498743\n",
+      "17    1.376383\n",
+      "18    1.423780\n",
+      "19    1.611292\n",
+      "dtype: float64> 14\n",
+      "           a         b         c         d         e         f\n",
+      "0   1.682647  1.513711  1.118498  1.113972  1.454993  6.883821\n",
+      "1   1.618436  1.214707  1.396516  1.845840  1.773360  7.848859\n",
+      "2   1.138137  1.373487  1.265437  1.445059  1.862862  7.084983\n",
+      "3   1.091661  1.812778  1.872193  1.295895  1.227430  7.299957\n",
+      "4   1.267019  1.978086  1.373799  1.415566  1.169479  7.203949\n",
+      "5   1.207394  1.939644  1.917794  1.563452  1.688764  8.317048\n",
+      "6   1.771552  1.550108  1.172892  1.132550  1.586792  7.213894\n",
+      "7   1.126037  1.722039  1.522941  1.422347  1.868040  7.661404\n",
+      "8   1.015470  1.510194  1.448237  1.264710  1.837397  7.076008\n",
+      "9   1.481383  1.904907  1.814584  1.316289  1.744941  8.262102\n",
+      "10  1.614178  1.992218  1.086836  1.260741  1.826878  7.780850\n",
+      "11  1.239842  1.660824  1.818875  1.268992  1.067019  7.055553\n",
+      "12  1.398495  1.830475  1.664868  1.312020  1.423880  7.629738\n",
+      "13  1.851649  1.171435  1.746779  1.988057  1.350265  8.108185\n",
+      "14  1.088945  1.731347  1.302080  1.176986  1.387287  6.686645\n",
+      "15  1.820113  1.241120  1.982601  1.786062  1.766845  8.596740\n",
+      "16  1.588188  1.297377  1.109791  1.839029  1.659330  7.493715\n",
+      "17  1.860600  1.413923  1.338702  1.259449  1.009240  6.881914\n",
+      "18  1.049387  1.352402  1.465650  1.404907  1.846553  7.118899\n",
+      "19  1.643565  1.265859  1.423263  1.792032  1.931743  8.056461\n",
+      "           a         b         c         d         e         f    g\n",
+      "0   1.682647  1.513711  1.118498  1.113972  1.454993  6.883821  LT8\n",
+      "1   1.618436  1.214707  1.396516  1.845840  1.773360  7.848859  LT8\n",
+      "2   1.138137  1.373487  1.265437  1.445059  1.862862  7.084983  LT8\n",
+      "3   1.091661  1.812778  1.872193  1.295895  1.227430  7.299957  LT8\n",
+      "4   1.267019  1.978086  1.373799  1.415566  1.169479  7.203949  LT8\n",
+      "5   1.207394  1.939644  1.917794  1.563452  1.688764  8.317048  GT8\n",
+      "6   1.771552  1.550108  1.172892  1.132550  1.586792  7.213894  LT8\n",
+      "7   1.126037  1.722039  1.522941  1.422347  1.868040  7.661404  LT8\n",
+      "8   1.015470  1.510194  1.448237  1.264710  1.837397  7.076008  LT8\n",
+      "9   1.481383  1.904907  1.814584  1.316289  1.744941  8.262102  GT8\n",
+      "10  1.614178  1.992218  1.086836  1.260741  1.826878  7.780850  LT8\n",
+      "11  1.239842  1.660824  1.818875  1.268992  1.067019  7.055553  LT8\n",
+      "12  1.398495  1.830475  1.664868  1.312020  1.423880  7.629738  LT8\n",
+      "13  1.851649  1.171435  1.746779  1.988057  1.350265  8.108185  GT8\n",
+      "14  1.088945  1.731347  1.302080  1.176986  1.387287  6.686645  LT8\n",
+      "15  1.820113  1.241120  1.982601  1.786062  1.766845  8.596740  GT8\n",
+      "16  1.588188  1.297377  1.109791  1.839029  1.659330  7.493715  LT8\n",
+      "17  1.860600  1.413923  1.338702  1.259449  1.009240  6.881914  LT8\n",
+      "18  1.049387  1.352402  1.465650  1.404907  1.846553  7.118899  LT8\n",
+      "19  1.643565  1.265859  1.423263  1.792032  1.931743  8.056461  GT8\n",
+      "the number of LT8 is: 15\n",
+      "GT8 =  0.21260287383556972 LT8 =  0.35017545507300346\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q 10\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "matrix = np.random.uniform(1,2, size = (20,5))\n",
+    "# print (matrix)\n",
+    "\n",
+    "# now creating a dataframe\n",
+    "dataf = pd.DataFrame(matrix, columns = ['a', 'b', 'c', 'd', 'e'])\n",
+    "print (dataf)\n",
+    "\n",
+    "std_dev= dataf.std()\n",
+    "print (std_dev)\n",
+    "print (std_dev.idxmax(), end = ' ')\n",
+    "print (max(std_dev))\n",
+    "\n",
+    "\n",
+    "mn = dataf.mean(axis = 1)\n",
+    "# print(mn)\n",
+    "print (mn.min, mn.idxmin())\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Q 11\n",
+    "# adding a new column\n",
+    "\n",
+    "dataf['f'] = dataf[['a', 'b', 'c', 'd', 'e']].sum(axis = 1)\n",
+    "print (dataf)\n",
+    "\n",
+    "dataf['g'] = dataf['f'].apply(lambda x: 'GT8' if x > 8 else 'LT8')\n",
+    "print (dataf)\n",
+    "\n",
+    "num_lt8 = (dataf['g'] == 'LT8').sum()\n",
+    "print ('the number of LT8 is:', num_lt8)\n",
+    "\n",
+    "std_l = dataf.loc[dataf['g'] == 'LT8', 'f'].std()\n",
+    "std_g = dataf.loc[dataf['g'] == 'GT8', 'f'].std()\n",
+    "\n",
+    "print ('GT8 = ', std_g, 'LT8 = ', std_l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1796cf1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], 7, 8, 9]\n",
+      "[[ 8 10 12]\n",
+      " [11 13 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q 12\n",
+    "# in python numpy, it automatically adjusts the size of array to perform operations\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "arr1 = [[1, 2, 3], [4, 5, 6]]\n",
+    "arr2 = [7, 8, 9]\n",
+    "\n",
+    "print (arr1 + arr2)\n",
+    "\n",
+    "arr3 = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "arr4 = np.array([7, 8, 9])\n",
+    "\n",
+    "print (arr3 + arr4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "626fb3b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using my method:  40\n",
+      "Using numpy.argmin():  40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Q 13\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def find_min_index(arr):\n",
+    "    index = 0\n",
+    "    min_val = arr[0]\n",
+    "    for i in range (len(arr)):\n",
+    "        if arr[i] < min_val:\n",
+    "            min_val = arr[i]\n",
+    "            index = i\n",
+    "            \n",
+    "    return index\n",
+    "\n",
+    "arr1 = np.array([92, 37, 14, 65, 78, 23, 91, 54, 88, 10, 29, 46, 73, 81, 19, 36, 57, 67, 12, 45, \n",
+    "       87, 32, 69, 58, 27, 95, 42, 50, 75, 18, 61, 83, 11, 68, 49, 76, 22, 40, 64, 99, 1])\n",
+    "\n",
+    "print ('Using my method: ', find_min_index(arr1))\n",
+    "print ('Using numpy.argmin(): ', np.argmin(arr1))"
    ]
   }
  ],
